fix: add scripts directieves

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "初心脚手架~",
   "main": "index.js",
   "scripts": {
-    "dev": ""
+    "dev": "",
+    "build": ""
   },
   "bin": {
     "chuxin": "./bin/index.js"
