feat: 用于 第01期：Vue3 从入门到放弃~ 代码演示

--- a/demo-api/package.json
+++ b/demo-api/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.7.7",
+    "vue": "^3.4.29",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^20.14.11",
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
