--- a/demo-api/tsconfig.app.json
+++ b/demo-api/tsconfig.app.json
@@ -17,6 +17,11 @@
     "noEmit": true,
     "jsx": "preserve",
 
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
