feat: 用于 第06期：深入学习 Vue3 Hooks 库 代码演示

--- a/demo-hooks/package.json
+++ b/demo-hooks/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@types/node": "^20.14.11",
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
