--- a/demo-element-table-virtual-scroller/package.json
+++ b/demo-element-table-virtual-scroller/package.json
@@ -11,10 +11,12 @@
     "core-js": "^3.8.3",
     "el-table-virtual-scroll": "^1.4.4",
     "element-ui": "^2.15.14",
+    "lodash-es": "^4.17.21",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vue-virtual-scroller": "^1.1.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "normalize-wheel": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
